# pinecone-mcp-0

./: pyproject.toml
src/pinecone_mcp_0/: __init__.py  pinecone_mcp_0.py
